CSS fix for Chrome to ensure configuration properties keys dont wrap

--- a/org.eclipse.virgo.apps.admin/src/main/webapp/styles/configuration.css
+++ b/org.eclipse.virgo.apps.admin/src/main/webapp/styles/configuration.css
@@ -17,7 +17,7 @@
 	background: #BAD9EC;
 }
 
-.config-container td {
+.config-container td + td {
 	 word-wrap: break-word;
 	 word-break: break-all;
 }
